--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,7 @@ body, a{
     padding-left: 25px;
     padding-right: 32px;
     padding-top: 49px;
+    width: 100%;
 }
 
 .popup-text{
@@ -67,7 +68,8 @@ body, a{
 }
 
 .wrap-screen{
-    width: 363px;
+    width: 100%;
+    max-width: 363px;
     box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.4);
     border-radius: 20px;
 }
@@ -206,12 +208,13 @@ body, a{
 }
 
 .second-step-btn-block{
-    width: 298px;
+    max-width: 298px;
     display: flex;
     justify-content: space-between;
     margin-top: 51px;
     height: 41px;
     margin-bottom: 52px;
+    width: 100%;
 }
 
 .screen-controll-btn{
@@ -224,18 +227,21 @@ body, a{
 }
 
 .third-step-btn-block{
-    width: 298px;
+    max-width: 298px;
     display: flex;
     justify-content: space-between;
     margin-top: 51px;
     height: 41px;
     margin-bottom: 82px;
+    width: 100%;
 }
 
 .checkbox-container{
-    width: 328px;
+    width: 100%;
+    max-width: 328px;
     display: flex;
     flex-direction: column;
+    margin-left: 35px;
 }
 
 .checkbox-container .fourth-step-checkbox + .fourth-step-checkbox{
@@ -320,16 +326,14 @@ body, a{
 }
 
 .city-extra-input {
-    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
+    width: 100%;
+    max-width: 280px;
+    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.3);
     border-radius: 20px;
-    width: 280px;
-    height: 42px;
-    font-size: 18px;
-    line-height: 21px;
     border: none;
+    background: #FFFFFF;
+    height: 42px;
     padding-left: 16px;
-    z-index: 100;
-    position: relative;
 }
 
 .city-input-icon {
@@ -337,8 +341,8 @@ body, a{
     font-size: 27px !important;
     line-height: 21px;
     z-index: 2;
-    right: 40px;
-    top: 4px;
+    left: 115px;
+    bottom: 34px;
     background: linear-gradient(180deg, rgb(83, 83, 83) 0%, rgb(248, 248, 248) 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -346,7 +350,8 @@ body, a{
 }
 
 .select-list{
-    margin-left: 27px;
+    max-width: 280px;
+    width: 100%;
 }
 
 .options{
@@ -355,7 +360,7 @@ body, a{
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
     border-radius: 20px;
     position: relative;
-    bottom: 30px;
+    bottom: 68px;
     padding: 14px;
 }
 
@@ -446,7 +451,8 @@ body, a{
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 361px;
+    max-width: 361px;
+    width: 100%;
 }
 
 .main-container{
@@ -479,12 +485,12 @@ body, a{
 }
 
 .main-icon-block{
-    display: flex;
-    justify-content: space-between;
-    padding-left: 31px;
-    padding-right: 31px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    justify-content: space-around;
     margin-top: 23px;
     width: 100%;
+    max-width: 291px;
 }
 
 .main-icon{
@@ -517,7 +523,7 @@ body, a{
 }
 
 .icon-description{
-    font-size: 14px;
+    font-size: 13px;
     line-height: 16px;
 
 }
@@ -565,7 +571,7 @@ body, a{
 }
 
 .des-slider-block{
-    width: 324px;
+    width: 100%;
     height: 285px;
     background: #EDEDED;
     border-radius: 15px;
@@ -754,7 +760,8 @@ body, a{
 }
 
 .add-res-block{
-    width: 317px;
+    max-width: 317px;
+    width: 100%;
     height: 105.37px;
     background: #FFFFFF;
     box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.4);
